--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz</title>
-
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
 
@@ -34,7 +34,7 @@
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <p>
-          Enter initials: <input type="text" id="initials" max="3" />
+          Enter Name: <input type="text" id="scorename">
           <button id="submit">Submit</button>
         </p>
       </div>
