kept the code dry and deleted duplicate folders

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>
           Try to answer the following code-related questions within the time
           limit of 60 seconds. Keep in mind that incorrect answers will penalize your
-          time by ten seconds!
+          time by <b>ten seconds</b>!
         </p>
         <button id="start">Start Quiz</button>
       </div>
